refactor: add SubmitButton

--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -37,4 +37,10 @@ button {
     opacity: 0.9;
     cursor: pointer;
   }
+
+  &:disabled {
+    background-color: $disabledBackground;
+    color: $disabledColor;
+    cursor: not-allowed;
+  }
 }
