--- a/src/presentation/pages/login/styles.scss
+++ b/src/presentation/pages/login/styles.scss
@@ -23,14 +23,8 @@
       text-transform: uppercase;
     }
 
-    .submit {
+    button {
       margin-top: 32px;
-
-      &:disabled {
-        background-color: $disabledBackground;
-        color: $disabledColor;
-        cursor: not-allowed;
-      }
     }
 
     .link {
