--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -27,6 +27,7 @@ button {
   font-size: 16px;
   border: none;
   padding: 0px 16px;
+  outline: none;
 
   &:not(:disabled):hover {
     opacity: 0.9;
