--- a/src/presentation/pages/survey-list/components/item/styles.scss
+++ b/src/presentation/pages/survey-list/components/item/styles.scss
@@ -32,33 +32,9 @@
       right: -10px;
     }
 
-    time {
-      display: flex;
-      flex-direction: column;
-      background-color: $primaryLight;
-      color: $white;
-      border-radius: 8px;
+    .calendarWrap {
       margin-left: 24px;
       align-self: center;
-      align-items: center;
-      justify-content: center;
-      width: 60px;
-      height: 100px;
-      flex-shrink: 0;
-
-      .day {
-        font-size: 40px;
-        font-weight: bold;
-      }
-
-      .month {
-        text-transform: lowercase;
-        margin: 0px 0px 6px;
-      }
-
-      .year {
-        font-size: 16px;
-      }
     }
 
     p {
