--- a/src/presentation/pages/survey-list/components/item-empty/styles.scss
+++ b/src/presentation/pages/survey-list/components/item-empty/styles.scss
@@ -1,4 +1,5 @@
-@import "../../../../styles/colors.scss";;
+@import "../../../../styles/colors.scss";
+@import "../../../../styles/animations.scss";
 
 .surveyItemEmpty {
   min-height: 250px;
@@ -51,11 +52,5 @@
 @media only screen and (max-width: 600px) {
   .surveyItemEmpty {
     flex-basis: 100%;
-  }
-}
-
-@keyframes shimmer {
-  100% {
-    transform: translateX(100%);
   }
 }
